<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist" />
    <item
        android:id="@+id/action_go_to_album"
        android:title="@string/action_go_to_album" />
    <item
        android:id="@+id/action_go_to_artist"
        android:title="@string/action_go_to_artist" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share" />
    <item
        android:id="@+id/action_playback_speed"
        android:title="@string/playback_speed"
        android:visible="@bool/isMarshmallow" />
    <item
        android:id="@+id/action_sleep_timer"
        android:title="@string/action_sleep_timer" />
    <item
        android:id="@+id/action_equalizer"
        android:title="@string/equalizer" />
    <item
        android:id="@+id/action_go_to_drive_mode"
        android:title="@string/drive_mode" />
    <item
        android:id="@+id/action_save_playing_queue"
        android:title="@string/action_save_playing_queue" />
    <item
        android:id="@+id/action_set_as_ringtone"
        android:title="@string/action_set_as_ringtone" />
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details" />
    <item
        android:id="@+id/action_clear_playing_queue"
        android:title="@string/action_clear_playing_queue" />
    <item
        android:id="@+id/action_delete_from_device"
        android:title="@string/action_delete_from_device" />
</menu>
