<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/for_you" />

    <item
        android:id="@+id/action_song"
        android:enabled="true"
        android:icon="@drawable/ic_audiotrack"
        android:title="@string/songs" />

    <item
        android:id="@+id/action_web"
        android:enabled="true"
        android:icon="@drawable/ic_cloud"
        android:title="@string/web" />

    <item
        android:id="@+id/action_database"
        android:enabled="true"
        android:icon="@drawable/ic_library_music"
        android:title="@string/database" />

    <item
        android:id="@+id/action_search_tab"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search" />

</menu>
