<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <code.name.monkey.retromusic.views.TopAppBarLayout
        android:id="@+id/appBarLayout"
        style="?appBarLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/bottom_nav_mini_player_height"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:id="@+id/entriesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/entry_playlists"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_queue_music"
                        app:tint="?attr/colorPrimary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/playlists"
                        android:textAppearance="@style/TextViewSubtitle1" />
                </LinearLayout>

                <View
                    android:id="@+id/dividerPlaylists"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.4"
                    android:background="?attr/colorOutline" />

                <LinearLayout
                    android:id="@+id/entry_artists"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_artist"
                        app:tint="?attr/colorPrimary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/artists"
                        android:textAppearance="@style/TextViewSubtitle1" />
                </LinearLayout>

                <View
                    android:id="@+id/dividerArtists"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.4"
                    android:background="?attr/colorOutline" />

                <LinearLayout
                    android:id="@+id/entry_albums"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_album"
                        app:tint="?attr/colorPrimary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/albums"
                        android:textAppearance="@style/TextViewSubtitle1" />
                </LinearLayout>

                <View
                    android:id="@+id/dividerAlbums"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.4"
                    android:background="?attr/colorOutline" />

                <LinearLayout
                    android:id="@+id/entry_songs"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_audiotrack"
                        app:tint="?attr/colorPrimary" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/songs"
                        android:textAppearance="@style/TextViewSubtitle1" />
                </LinearLayout>

                <View
                    android:id="@+id/dividerSongs"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.4"
                    android:background="?attr/colorOutline" />
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/last_added"
                android:textAppearance="@style/TextViewHeadline6"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/recentEmptyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/no_albums"
                android:textAppearance="@style/TextViewBody1"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone"
                tools:visibility="visible" />

            <code.name.monkey.retromusic.views.insets.InsetsRecyclerView
                android:id="@+id/recentAlbumsRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                tools:itemCount="4"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_database_album"
                tools:spanCount="2" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
